@@ -3,9 +3,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'org.hidetake.swagger.generator' version '2.18.2'
 	id 'java'
+	id 'jacoco'
 }
 
-group = 'com.github.fabriciolfj'
+group = 'com.github.fabriciolfj.apiecommerce'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -31,6 +32,70 @@ swaggerSources {
 compileJava.dependsOn swaggerSources.eStore.code
 sourceSets.main.java.srcDir "${swaggerSources.eStore.code.outputDir}/src/main/java"
 sourceSets.main.resources.srcDir "${swaggerSources.eStore.code.outputDir}/src/main/resources"
+
+
+sourceSets {
+	integrationTest {
+		java {
+			compileClasspath += main.output + test.output
+			runtimeClasspath += main.output + test.output
+			srcDir file('src/integration/java')
+		}
+		resources.srcDir file('src/integration/resources')
+	}
+}
+
+configurations {
+	integrationTestImplementation.extendsFrom testImplementation
+	integrationTestRuntime.extendsFrom testRuntime
+}
+
+task integrationTest(type: Test) {
+	useJUnitPlatform()
+	description = 'Runs the integration tests.'
+	group = 'verification'
+	testClassesDirs = sourceSets.integrationTest.output.classesDirs
+	classpath = sourceSets.integrationTest.runtimeClasspath
+}
+check.dependsOn integrationTest
+integrationTest.mustRunAfter test
+
+test {
+	jvmArgs '--enable-preview'
+	useJUnitPlatform()
+	finalizedBy(jacocoTestReport)
+}
+
+
+jacoco {
+	toolVersion = "0.8.6"
+	reportsDir = file("$buildDir/jacoco")
+}
+
+jacocoTestReport {
+	dependsOn test // tests are required to run before generating the report
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(
+					dir: it,
+					exclude: [
+							'com/github/fabriciolfj/apiecommerce/model/*',
+							'com/github/fabriciolfj/apiecommerce/api/*Api.*',
+							'com/github/fabriciolfj/apiecommerce/security/UNUSED/*',
+					])
+		}))
+	}
+}
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			limit {
+				minimum = 0.9
+			}
+		}
+	}
+}
 
 repositories {
 	mavenCentral()
@@ -58,8 +123,6 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntime('com.h2database:h2')
 }
 
-test {
-	useJUnitPlatform()
-}
